--- a/.travis.yml
+++ b/.travis.yml
@@ -19,15 +19,15 @@ script:
   - docker build -t udagram-api-user ./udagram-api-user
   - docker build -t udagram-frontend ./udagram-frontend
   - docker build -t reverseproxy ./udagram-reverseproxy
-  - docker tag udagram-api-feed sunnylee1905/udagram-api-feed:v1
-  - docker tag udagram-api-user sunnylee1905/udagram-api-user:v1
-  - docker tag udagram-frontend sunnylee1905/udagram-frontend:v1
-  - docker tag reverseproxy sunnylee1905/reverseproxy:v1
+  - docker tag udagram-api-feed sunnylee1905/udagram-api-feed:v2
+  - docker tag udagram-api-user sunnylee1905/udagram-api-user:v2
+  - docker tag udagram-frontend sunnylee1905/udagram-frontend:v2
+  - docker tag reverseproxy sunnylee1905/reverseproxy:v2
 
-# Tasks to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
+# Commands to perform after the process is successful. Formatting the Docker username and password as below enables you to programmatically log in without having the password exposed in logs.
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push sunnylee1905/udagram-api-feed:v1
-  - docker push sunnylee1905/udagram-api-user:v1
-  - docker push sunnylee1905/udagram-frontend:v1
-  - docker push sunnylee1905/reverseproxy:v1
+  - docker push sunnylee1905/udagram-api-feed:v2
+  - docker push sunnylee1905/udagram-api-user:v2
+  - docker push sunnylee1905/udagram-frontend:v2
+  - docker push sunnylee1905/reverseproxy:v2
