--- a/frontend-service.yaml
+++ b/frontend-service.yaml
@@ -3,10 +3,10 @@ kind: Service
 metadata:
   name: udagram-frontend
   labels:
-    run: udagram-frontend
+    app: udagram-frontend
 spec:
   ports:
-    - port: 80
+    - port: 8080
       protocol: TCP
   selector:
-    run: udagram-frontend
+    app: udagram-frontend
