--- a/aws-secret.yaml
+++ b/aws-secret.yaml
@@ -4,5 +4,7 @@ metadata:
   name: aws-secret
 type: Opaque
 data:
-  aws_access_key_id: aws_access_key_id
-  aws_secret_access_key: aws_secret_access_key
+  # Key-value pairs
+  AWS_ACCESS_KEY_ID: Q***=
+  AWS_SECRET_ACCESS_KEY: Sz***Q==
+  AWS_SESSION_TOKEN: SV****j
