--- a/backend-user-service.yaml
+++ b/backend-user-service.yaml
@@ -6,7 +6,8 @@ metadata:
     app: backend-user
 spec:
   ports:
-    - port: 80
-      protocol: TCP
+    - name: "8080"
+      port: 8080
+      targetPort: 8080
   selector:
     app: backend-user
