--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: my-secret
+  name: env-secret
 type: Opaque
 data:
   # Key-value pairs
-  POSTGRES_USERNAME: POSTGRES_USERNAME
-  POSTGRES_PASSWORD: POSTGRES_PASSWORD
+  POSTGRES_USERNAME: c****Vy
+  POSTGRES_PASSWORD: c****==
