--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: udagram-frontend
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: udagram-frontend
@@ -15,7 +15,70 @@ spec:
         app: udagram-frontend
     spec:
       containers:
-        - name: udagram-frontend
-          image: sunnylee1905/udagram-frontend:v5
+        - image: sunnylee1905/udagram-frontend:v7
+          name: udagram-frontend
           ports:
-            - containerPort: 8080
+            - containerPort: 80
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "1024Mi"
+              cpu: "500m"
+          imagePullPolicy: Always
+          env:
+            - name: POSTGRES_USERNAME
+              valueFrom:
+                secretKeyRef:
+                  name: env-secret
+                  key: POSTGRES_USERNAME
+            - name: POSTGRES_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: env-secret
+                  key: POSTGRES_PASSWORD
+            - name: POSTGRES_DB
+              valueFrom:
+                configMapKeyRef:
+                  name: my-config
+                  key: POSTGRES_DB
+            - name: POSTGRES_HOST
+              valueFrom:
+                configMapKeyRef:
+                  name: my-config
+                  key: POSTGRES_HOST
+            - name: AWS_REGION
+              valueFrom:
+                configMapKeyRef:
+                  name: my-config
+                  key: AWS_REGION
+            - name: AWS_PROFILE
+              valueFrom:
+                configMapKeyRef:
+                  name: my-config
+                  key: AWS_PROFILE
+            - name: AWS_BUCKET
+              valueFrom:
+                configMapKeyRef:
+                  name: my-config
+                  key: AWS_BUCKET
+            - name: JWT_SECRET
+              valueFrom:
+                configMapKeyRef:
+                  name: my-config
+                  key: JWT_SECRET
+            - name: URL
+              valueFrom:
+                configMapKeyRef:
+                  name: my-config
+                  key: URL
+          volumeMounts:
+            - name: aws-secret
+              mountPath: "/root/.aws/"
+              readOnly: true
+      restartPolicy: Always
+      volumes:
+        - name: aws-secret
+          secret:
+            secretName: aws-secret
