--- a/frontend-service.yaml
+++ b/frontend-service.yaml
@@ -6,7 +6,8 @@ metadata:
     app: udagram-frontend
 spec:
   ports:
-    - port: 8080
+    - port: 8100
+      targetPort: 80
       protocol: TCP
   selector:
     app: udagram-frontend
