--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: reverseproxy
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: reverseproxy
@@ -15,7 +15,24 @@ spec:
         app: reverseproxy
     spec:
       containers:
-        - name: reverseproxy
-          image: sunnylee1905/reverseproxy:v5
+        - image: sunnylee1905/reverseproxy:v5
+          name: reverseproxy
           ports:
             - containerPort: 8080
+          imagePullPolicy: Always
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "1024Mi"
+              cpu: "500m"
+          volumeMounts:
+            - name: aws-secret
+              mountPath: "/root/.aws/"
+              readOnly: true
+      restartPolicy: Always
+      volumes:
+        - name: aws-secret
+          secret:
+            secretName: aws-secret
