--- a/backend-user-deployment.yaml
+++ b/backend-user-deployment.yaml
@@ -64,6 +64,13 @@ spec:
                 configMapKeyRef:
                   name: my-config
                   key: URL
+          resources:
+            requests:
+              memory: "64Mi"
+              cpu: "250m"
+            limits:
+              memory: "1024Mi"
+              cpu: "500m"
           volumeMounts:
             - name: aws-secret
               mountPath: "/root/.aws/"
